--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,13 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <scm>
+        <connection>scm:git:git@github.com:chocoteam/Report.git</connection>
+        <url>scm:git:git://github.com/chocoteam/Report</url>
+        <developerConnection>scm:git:git@github.com:chocoteam/Report.git</developerConnection>
+        <tag>HEAD</tag>
+    </scm>
+
     <dependencies>
         <dependency>
             <groupId>com.vaadin</groupId>
